--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "parcel-project-template",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://OlegYelis.github.io/dezgo-images",
+  "homepage": "https://dz-image.vercel.app/",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /dezgo-images/"
+    "build": "parcel build src/*.html --public-url /dz-images/"
   },
   "repository": {
     "type": "git",
