--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://dz-image.vercel.app/",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /dz-images/"
+    "build": "parcel build src/*.html --public-url"
   },
   "repository": {
     "type": "git",
